Added dockerfile and build image

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,10 +10,10 @@ spring.h2.console.path=/h2-console
 
 
 # setup some mysql database configs from .env variables
-spring.datasource.url=jdbc:postgresql://localhost:5432/paty_blog   
+spring.datasource.url=jdbc:postgresql://aws-0-eu-central-1.pooler.supabase.com:5432/postgres?user=postgres.lxtzhlbamvudbgsgrmpd&password=cWdgFIeQFrhCj3tR
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.username=postgres
-spring.datasource.password=Munezero25
+spring.datasource.password=cWdgFIeQFrhCj3tR
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
